修改输出日志颜色